--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,3 @@
-@import './components/OutcomesHeader/outcomes-header';
-@import 'content/pages/LandingPage/landing-page.scss';
-@import 'content/scenarios/EmployeeAttrition/employee-attrition.scss';
+@import './index.scss';
+
+@import 'carbon-components/scss/globals/scss/styles.scss';
