--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,14 @@
 $carbon--theme: $carbon--theme--g100;
 @include carbon--theme();
 
+//@import '@carbon/type/scss/type';
+//@import '@carbon/type/scss/font-face/mono';
+//@import '@carbon/type/scss/font-face/sans';
+//@import '@carbon/type/scss/reset';
+//@include carbon--type-reset();
+//@include carbon--font-face-mono();
+//@include carbon--font-face-sans();
+
 @import 'carbon-components/scss/globals/scss/vendor/@carbon/type/scss/font-family.scss';
 @import 'carbon-components/scss/globals/scss/vendor/@carbon/layout/scss/breakpoint.scss';
 @import 'carbon-components/scss/globals/scss/typography.scss';
