--- a/src/content/_content-page.scss
+++ b/src/content/_content-page.scss
@@ -4,6 +4,14 @@ main.bx--content {
   background: #161616;
 }
 
-h2 {
+h2.content-page__heading {
+  padding-top: $spacing-07 * 2;
+  padding-bottom: $spacing-01;
   color: $text-04;
+  @include carbon--type-style('productive-heading-07');
+}
+
+p {
+  @include carbon--type-style('body-long-02');
+  margin-bottom: 2rem;
 }
