--- a/src/content/pages/LandingPage/_landing-page.scss
+++ b/src/content/pages/LandingPage/_landing-page.scss
@@ -11,4 +11,5 @@ h2.landing-page__heading {
   padding-top: $spacing-07 * 7;
   padding-bottom: $spacing-05;
   color: $text-04;
+  @include carbon--type-style('productive-heading-07');
 }
