--- a/src/content/pages/OverviewPage/_overview-page.scss
+++ b/src/content/pages/OverviewPage/_overview-page.scss
@@ -1,8 +1,8 @@
 @import "../../../index.scss";
 
 div.overview-page__banner {
-  background-image: url("../img/overview.jpeg");
+  background-image: url("../img/overview.png");
   background-repeat: no-repeat;
-  background-position: right top;
+  background-position: right bottom;
   background-size: auto 100%;
 }
