--- a/src/content/_content-page.scss
+++ b/src/content/_content-page.scss
@@ -19,7 +19,16 @@ a.bx--tile--clickable p {
   color: $text-04;
 }
 
+a.bx--tile--clickable h4 {
+  color: $interactive-04;
+}
+
+a.bx--tile--clickable hr {
+  color: $interactive-04;
+}
+
 a.bx--tile--clickable svg {
   margin: auto;
   display: block;
+  color: $interactive-04;
 }
