added content and tiles to overview page

--- a/src/content/_content-page.scss
+++ b/src/content/_content-page.scss
@@ -15,6 +15,10 @@ p {
   @include carbon--type-style('body-long-02');
 }
 
+p + p {
+  margin-top: 1.5rem;
+}
+
 a.bx--tile--clickable p {
   color: $text-04;
 }
