banner graphic and text changes

--- a/src/content/_content-page.scss
+++ b/src/content/_content-page.scss
@@ -42,8 +42,8 @@ nav.breadcrumb {
 }
 
 div.show-banner {
-  background-image: url("./pages/img/banner-60.png");
+  background-image: url("./pages/img/cp4d-backgound.jpg");
   background-repeat: no-repeat;
   background-position: right top;
-  background-size: 100% auto;
+  background-size: auto 100%;
 }
